# Atom

./: .env  Procfile  README.md  app.py  render.yaml  requirements.txt  serviceAccountKey.json
dashboard/: .metadata  pubspec.yaml
dashboard/assets/: README.txt
dashboard/lib/: firebase_options.dart  main.dart
dashboard/lib/pages/: analytics_page.dart  dashboard_page.dart
dashboard/lib/services/: csv_loader.dart
data/: metrics.db
explainer_agent/: agent.py  app.py  main.py  tasks.py  tools.py
server/: app.py  chat.py  forecast_pipeline.py  metrics_collector.py
sql_agent/: README.md  convert.py  pyproject.toml  server.py
sql_agent/data/: metrics.db
sql_agent/src/sql_agent/: crew.py  db.py  main.py  schema.py
sql_agent/src/sql_agent/config/: agents.yaml  tasks.yaml
sql_agent/src/sql_agent/tools/: custom_tool.py
training_data/: metrics_updated.csv  training_model.ipynb
training_model/: metrics.csv  training_model.ipynb
