[project]
name = "sql_agent"
version = "0.1.0"
description = "Sql_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
    "groq>=1.0.0",
    "litellm>=1.75.3",
    "sqlalchemy>=2.0.46",
    "apscheduler>=3.11.2",
    "pydantic[email]>=2.11.10",
    "fastapi-sso>=0.19.0",
]

[project.scripts]
sql_agent = "sql_agent.main:run"
run_crew = "sql_agent.main:run"
train = "sql_agent.main:train"
replay = "sql_agent.main:replay"
test = "sql_agent.main:test"
run_with_trigger = "sql_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
